examples/test/testpolicy192.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy192
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key27: value25
      key6: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value23
          key29: value33
          key27: value10
      podSelector:
        matchLabels:
          key42: value24
          key1: value20
